--- a/automations/welcome.yaml
+++ b/automations/welcome.yaml
@@ -61,8 +61,8 @@
       value_template: '{{ state.attributes.elevation }}'
       below: 5
     - condition: state
-      entity_id: light.stehlampe_flur
+      entity_id: light.floor_yeelight
       state: 'off'
   action:
     service: homeassistant.turn_on
-    entity_id: switch.beleuchtung_flur
+    entity_id: switch.floor_light_ceiling
