--- a/configuration.yaml
+++ b/configuration.yaml
@@ -73,10 +73,6 @@ frontend:
   # extra_html_url_es5:
   #   - /local/custom_ui/custom-weather-card.html
 
-# discovery:
-#   ignore:
-#     - panasonic_viera
-
 tts:
   - platform: google
     language: 'de'
@@ -86,8 +82,10 @@ tado:
   password: !secret TADO_PASSWORD
 
 mqtt:
-  discovery: true
-  discovery_prefix: homeassistant
+  # discovery: true
+  # discovery_prefix: homeassistant
+  broker: 192.168.10.150
+  port: 1883
   client_id: !secret MQTT_CLIENT_ID
   username: !secret MQTT_USERNAME
   password: !secret MQTT_PASSWORD
@@ -141,9 +139,9 @@ group: !include_dir_merge_named groups
 homekit: !include homekit.yaml
 input_text: !include inputs/text.yaml
 ios: !include ios.yaml
-light: !include_dir_merge_list lights
+# light: !include_dir_merge_list lights
 media_player: !include_dir_merge_list media_player
 scene: !include_dir_merge_list scene
 script: !include_dir_merge_named scripts
 sensor: !include_dir_merge_list sensor
-switch: !include_dir_merge_list switch
+# switch: !include_dir_merge_list switch
