--- a/packages/klingel.yaml
+++ b/packages/klingel.yaml
@@ -38,8 +38,8 @@ binary_sensor:
 timer:
   klingel_cycle:
     duration: '00:00:05'
-  return_home:
-    duration: '00:30:00'
+  # return_home:
+  #   duration: '00:30:00'
 
 script:
   doorbell:
@@ -79,28 +79,28 @@ automation:
       - service: switch.turn_on
         entity_id: switch.door_opener
 
-  - alias: start_return_home_timer
-    trigger:
-      platform: state
-      entity_id: group.person_dennis
-      to: 'home'
-    action:
-      - service: timer.start
-        entity_id: timer.return_home
+  # - alias: start_return_home_timer
+  #   trigger:
+  #     platform: state
+  #     entity_id: group.person_dennis
+  #     to: 'home'
+  #   action:
+  #     - service: timer.start
+  #       entity_id: timer.return_home
 
-  - alias: doorbell_ask_for_door_open
-    trigger:
-      platform: state
-      entity_id: group.person_dennis
-      to: 'home'
-    action:
-      - service: notify.ios_iphone_von_dennis
-        data:
-          title: 'Wilkommen Zuhause!'
-          message: 'Möchtest du die Tür öffnen?'
-          data:
-            push:
-              category: 'klingel'
+  # - alias: doorbell_ask_for_door_open
+  #   trigger:
+  #     platform: state
+  #     entity_id: group.person_dennis
+  #     to: 'home'
+  #   action:
+  #     - service: notify.ios_iphone_von_dennis
+  #       data:
+  #         title: 'Wilkommen Zuhause!'
+  #         message: 'Möchtest du die Tür öffnen?'
+  #         data:
+  #           push:
+  #             category: 'klingel'
 
   # - alias: doorbell_download_last_motion_video
   #   trigger:
@@ -145,7 +145,7 @@ automation:
     action:
       - service: timer.start
         entity_id: timer.klingel_cycle
-      - service: notify.notify
+      - service: notify.all_ios_devices
         data_template:
           title: 'Klingeling...'
           message: 'Jemand wartet an der Haustür'
@@ -163,7 +163,7 @@ automation:
         data:
           message: 'Klingel: Haustür unten'
           data:
-            icon: '~/.homeassistant/www/icons/baseline-notifications_active.png'
+            icon: '/root/.homeassistant/www/icons/baseline-notifications_active.png'
       ## Licht blinken lassen
 
   - alias: doorbell_wohnung_notify
@@ -193,12 +193,11 @@ automation:
       # - service: camera.snapshot
       #   entity_id: camera.arthur_cam
       #   data:
-      #     filename: '~/homeassistant/.homeassistant/www/snapshots/front_door/{{ states("input_text.klingel_random") }}.jpg'
-      - service: notify.notify
-      # - service: notify.ios_iphone_von_dennis
-        data_template:
-          title: 'Klingeling...'
-          message: 'Jemand wartet vor der Wohnungstür'
+      #     filename: '/root/.homeassistant/www/snapshots/front_door/{{ states("input_text.klingel_random") }}.jpg'
+      # - service: notify.all_ios_devices
+      #   data_template:
+      #     title: 'Klingeling...'
+      #     message: 'Jemand wartet vor der Wohnungstür'
           # data:
           #   push:
           #     category: klingel
@@ -215,5 +214,5 @@ automation:
         data:
           message: 'Klingel: Wohnungstür'
           data:
-            icon: '~/.homeassistant/www/icons/baseline-notifications_active.png'
+            icon: '/root/.homeassistant/www/icons/baseline-notifications_active.png'
       ## Licht blinken lassen
