--- a/packages/rooms/bad.yaml
+++ b/packages/rooms/bad.yaml
@@ -108,19 +108,19 @@ automation:
       #   entity_id: media_player.volumio
       #   data_template:
       #     volume_level: 0.65
-      - service: media_player.play_media
-        data:
-          entity_id: media_player.volumio_mpd
-          media_content_id: "https://hass.derstrassi.net/local/sounds/two-tone-chime.mp3"
-          media_content_type: "music"
-      - delay:
-          seconds: 5
-      - service: tts.google_say
-        entity_id: media_player.volumio_mpd
-        data_template:
-          message: "Die Luftfeuchtigkeit im Bad ist aktuell bei {{ states.sensor.humidity_158d0001c2c57f.state }}%, bitte lüften!"
-      - delay:
-          seconds: 8
+      # - service: media_player.play_media
+      #   data:
+      #     entity_id: media_player.volumio_mpd
+      #     media_content_id: "https://hass.derstrassi.net/local/sounds/two-tone-chime.mp3"
+      #     media_content_type: "music"
+      # - delay:
+      #     seconds: 5
+      # - service: tts.google_say
+      #   entity_id: media_player.volumio_mpd
+      #   data_template:
+      #     message: "Die Luftfeuchtigkeit im Bad ist aktuell bei {{ states.sensor.humidity_158d0001c2c57f.state }}%, bitte lüften!"
+      # - delay:
+      #     seconds: 8
       # - service: media_player.volume_set
       #   entity_id: media_player.volumio
       #   data_template:
