--- a/packages/rooms/flur.yaml
+++ b/packages/rooms/flur.yaml
@@ -13,6 +13,9 @@ homeassistant:
     light.gateway_light_286c0788a9dd:
       friendly_name: Nachtlicht Decke
       icon: 'mdi:lightbulb-on-outline'
+    switch.rf_floor_weihnachtsbaum:
+      friendly_name: Weihnachtsbaum
+      icon: 'mdi:pine-tree'
 
 group:
   flur:
@@ -25,6 +28,7 @@ group:
       - switch.floor_light_wall
       - light.gateway_light_286c0788a9dd
       - switch.floor_light_ceiling
+      - switch.rf_floor_weihnachtsbaum
       - light.floor_yeelight
       - script.yeelight_flur_pink
       - script.yeelight_flur_weiss
