--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,6 +13,10 @@ homeassistant:
     'light.*':
       # state_card_mode: break-slider
       state_card_mode: single-line
+    'camera.*':
+      custom_ui_state_card: null
+    'media_player.*':
+      custom_ui_state_card: null
     'switch.rf_*':
       assumed_state: false
       icon: 'mdi:lightbulb'
@@ -97,6 +101,9 @@ camera:
   - platform: ffmpeg
     name: arthur_cam
     input: -rtsp_transport tcp -i rtsp://192.168.20.62/unicast
+  - platform: mjpeg
+    name: arthur_cam_mjpeg
+    mjpeg_url: rtsp://192.168.20.62/unicast
     #extra_arguments: '-c:v h264_omx'
   # - platform: ffmpeg
   #   name: camera_hof
